# mlx-qwen3-asr

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SERVER_MANUAL.md  pyproject.toml  requirements.txt  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  long-media-regression.yml
docs/: ACADEMIC_BEST_PRACTICES_2026-02-15.md  ALGORITHMIC_MAXXING_2026-02-14.md  ARCHITECTURE.md  BENCHMARKING.md  BENCHMARKS.md  BENCHMARK_PLAN.md  COMPARISON.md  DECISIONS.md  DIARIZATION_BRIEF_2026-02-15.md  DIARIZATION_IMPLEMENTATION_SPEC_2026-02-15.md  DIARIZATION_NATIVE_PLAN_2026-02-15.md  DIARIZATION_RESEARCH_2026-02-15.md  EVAL_GAPS.md  EXECUTION_TRACKER_2026-02-14.md  FLUTTER_TTS_MIC_COEXISTENCE.md  GOLDEN_DATASET.md  IMPLEMENTATION_MEMORY.md  OPTIMIZATION_RESEARCH_2026-02-14.md  PRODUCTION_READINESS_REVIEW.md  PYTHON_READINESS_2026-02-15.md  QUALITY_GATE.md  RESEARCH.md  ROADMAP.md  USER_FEEDBACK_ROI_PLAN_2026-02-15.md
docs/benchmarks/: 2026-02-14-4bit-10s.json  2026-02-14-4bit-short.json  2026-02-14-aligner-backend-smoke.json  2026-02-14-aligner-backend-smoke.md  2026-02-14-aligner-parity-10.json  2026-02-14-aligner-parity-10.md  2026-02-14-encoder-windowing-threshold.json  2026-02-14-encoder-windowing-threshold.md  2026-02-14-encoder-windowing.json  2026-02-14-feature-mask-opt-after-fp16-long.json  2026-02-14-feature-mask-opt-after-fp16-short.json  (+99 more)
mlx_qwen3_asr/: __init__.py  audio.py  cache_utils.py  chunking.py  cli.py  config.py  convert.py  diarization.py  encoder.py  forced_aligner.py  generate.py  load_models.py  model.py  mrope.py  runtime_utils.py  session.py  streaming.py  tokenizer.py  transcribe.py  writers.py
scripts/: README.md  analyze_reference_parity_mismatches.py  benchmark_encoder_windowing.py  benchmark_streaming.py  build_diarization_manifest.py  build_earnings22_longform_manifest.py  build_multilingual_manifest.py  build_realworld_manifest.py  convert.py  eval_aligner_parity.py  eval_diarization.py  eval_librispeech_head2head.py  eval_manifest_head2head.py  eval_mel_parity.py  eval_nonnear_parity_matrix.py  eval_reference_parity_suite.py  eval_streaming_manifest.py  eval_streaming_metrics.py  generate_mel_filters.py  quality_gate.py  test_streaming_e2e.py  update_readme_stats.py
tests/: test_analyze_reference_parity_mismatches.py  test_audio.py  test_build_diarization_manifest.py  test_build_earnings22_longform_manifest.py  test_build_multilingual_manifest.py  test_build_realworld_manifest.py  test_cache_utils.py  test_chunking.py  test_cli.py  test_config.py  test_convert.py  test_diarization.py  test_diarization_live_integration.py  test_docs_integrity.py  test_eval_diarization.py  test_eval_nonnear_parity_matrix.py  test_eval_reference_parity_suite.py  test_eval_streaming_manifest.py  test_forced_aligner.py  test_generate.py  test_load_models.py  test_model.py  test_mrope.py  test_quality_gate.py  test_server.py  test_session.py  test_streaming.py  test_tokenizer.py  test_transcribe.py  test_writers.py
webapp/: app.js  index.html  styles.css
webapp-next/: .gitignore  next.config.ts  package-lock.json  package.json
(+20 files in other folders)
