[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-qwen3-asr"
version = "0.1.0"
description = "Qwen3-ASR speech recognition on Apple Silicon via MLX"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "dmoon"}]
keywords = ["speech-recognition", "asr", "qwen", "mlx", "apple-silicon", "transcription"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx>=0.18.0",
    "numpy",
    "huggingface-hub>=0.20.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
aligner = ["qwen-asr", "nagisa", "soynlp"]
dev = ["pytest", "ruff", "mypy"]
eval = ["soundfile>=0.12.1"]

[project.scripts]
mlx-qwen3-asr = "mlx_qwen3_asr.cli:main"

[project.urls]
Homepage = "https://github.com/moona3k/mlx-qwen3-asr"
Repository = "https://github.com/moona3k/mlx-qwen3-asr"
Issues = "https://github.com/moona3k/mlx-qwen3-asr/issues"

[tool.setuptools]
packages = {find = {where = ["."], include = ["mlx_qwen3_asr*"]}}
include-package-data = true

[tool.setuptools.package-data]
mlx_qwen3_asr = ["assets/*.npz", "assets/*.dict", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
